@@ -1,7 +1,11 @@
               Technical notes on version 2.1
 
 General:
+Release 2.1.26 beta
 12Jul07
+kes  Fix client-only build.
+kes  Integrate client-only fixes for bsys (initgroups) and conio from
+     Sergey Svishchev <svs@ropnet.ru> for the AIX platform.
 kes  Make arguments to get_scratch_volume() in same order as other
      such calls.
 kes  Rework the prune_volumes() subroutine so that after purging and
